# NADOC

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  MEMORY.md  Makefile  README.md  REFACTOR_AUDIT.md  START.md  justfile  m13mp18_scaffold.txt  main.py  pyproject.toml  test_gromacs_health.py  test_gromacs_pipeline.py
Examples/: 18hb.nadoc  18hb_2units.nadoc  18hb_Autoscrossover_test1_wrong.nadoc  18hb_m13.nadoc  18hb_seamless_t1.nadoc  26hb_platform_v3.nadoc  2hb_xover_atoms_test.nadoc  2hb_xover_val.nadoc  2x20sq_m13.nadoc  3NN_ground truth.nadoc  3NN_ground truth2.nadoc  3x6sq_m13.nadoc  6HB_Ushape.nadoc  6hb_2units.nadoc  6hb_Autoscrossover_test1_wrong.nadoc  6hb_ground_truth.nadoc  6hb_m13.nadoc  6hb_scaffold_TS1.nadoc  6hb_test.nadoc  6hb_then_18hb.nadoc  6hb_then_18hb_t2.nadoc  Con4.nadoc  Hinge_scaff_test.nadoc  Honeycome_6hb_test1_NADOC.nadoc  NS_trans_fix.nadoc  Nanosynth_SqArm_OHon_V7.sc  U6hb.nadoc  VoltronCore.json  VoltronCore.sc  Voltron_Core_Arm_V6.sc  hingeV4.nadoc  multi_domain_test.nadoc  multi_domain_test2.nadoc  multi_domain_test3.nadoc  multi_domain_test3_bend90.nadoc  sq_multi_domain_test1.nadoc
docs/: bundle_param_extraction.md  mrdna_setup.md  periodic_md_restraint_ramp_plan.md
drawings/: gen_honeycomb_bp0_crossovers.py  gen_honeycomb_bp0_truth.py  gen_honeycomb_proposed.py  gen_honeycomb_scaffold_truth.py  gen_lattice_ground_truth.py  optimize_hc_phase.py  scaffold_orientation_truth.md
experiments/: README.md  exp_crossover_placement_6hb.py  exp_sq_phase_comparison.py
frontend/: cadnano-editor.html  index.html  package-lock.json  (+3 more)
(+661 files in other folders)
